# rocket

./: .gitignore  Anchor.toml  js.js  package-lock.json  package.json
dapp-scaffold-1/: .gitignore  app.json  next.config.js  package.json  webpack.config.js  xnft.json
dapp-scaffold-1/.xnft-bundle/: xnft.json
dapp-scaffold-1/src/: threadprogram.ts
dapp-scaffold-1/src/client/: programId.ts
dapp-scaffold-1/src/client/accounts/: EG.ts  Game.ts  Piece.ts  index.ts
dapp-scaffold-1/src/client/errors/: custom.ts
dapp-scaffold-1/src/client/instructions/: index.ts  initialize.ts  joinHarder.ts  newEg.ts  (+7 more)
dapp-scaffold-1/src/components/: AppBar.tsx  NetworkSwitcher.tsx  Notification.tsx
dapp-scaffold-1/src/contexts/: ContextProvider.tsx
dapp-scaffold-1/src/hooks/: xnft-hooks.tsx
dapp-scaffold-1/src/models/: types.ts
dapp-scaffold-1/src/pages/: _app.tsx  _document.tsx  index.tsx
dapp-scaffold-1/src/stores/: useUserSOLBalanceStore.tsx
dapp-scaffold-1/src/styles/: globals.css
dapp-scaffold-1/src/utils/: explorer.ts
dapp-scaffold-1/src/views/: index.tsx
programs/rocket/: Cargo.toml
programs/rocket/src/: lib.rs
tests/: _setup.ts  rocket.ts
tests/js/src/: createTree.ts
xnft/: .env  js.js  package.json  somejs.js  webpack.config.js  xnft.json
xnft/manifest/: xnft.json
xnft/src/: App.tsx
xnft/src/App/: App.tsx  TokenDetails.tsx  TokenList.tsx  cpi_thready.json  cpi_thready.ts  thread_program.ts
xnft/src/client/: programId.ts
xnft/src/components/: Wallet.tsx  bufferFill.ts
xnft/src/hooks/: xnft-hooks.tsx
xnft/src/screens/: HomeScreen.tsx
(+16 files in other folders)
