[package]
name = "rocket"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rocket"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
borsh = "0.9.3"
anchor-lang = "0.26.0"
clockwork-sdk = "*"
arrayref = "*"
mpl-token-metadata = {features=["no-entrypoint"]}
anchor-spl = "0.26.0"
mpl-bubblegum = { features=["no-entrypoint", "cpi"]}
spl-account-compression = { version="0.1.8", features = ["cpi"] }
spl-noop = { version = "0.1.3", features = ["no-entrypoint"] }